cmake_minimum_required(VERSION 3.12)
project(TropicalSnake_xcodeproj)

set(CMAKE_CXX_STANDARD 14)

add_executable(TropicalSnake_xcodeproj
        project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
        project.xcworkspace/xcuserdata/nickpopyk.xcuserdatad/UserInterfaceState.xcuserstate
        project.xcworkspace/contents.xcworkspacedata
        xcuserdata/nickpopyk.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
        xcuserdata/nickpopyk.xcuserdatad/xcschemes/TropicalSnake.xcscheme
        xcuserdata/nickpopyk.xcuserdatad/xcschemes/xcschememanagement.plist
        project.pbxproj)
